Fix margins and paddings and alignment on the labels

--- a/juxtapose/css/juxtapose.css
+++ b/juxtapose/css/juxtapose.css
@@ -13,7 +13,7 @@ div.jx-slider {
 	height: 100%;
 	position: relative;
 	overflow: hidden;
-	cursor: pointer;	
+	cursor: pointer;
 }
 
 div.jx-handle {
@@ -96,18 +96,15 @@ div.jx-image.right {
 }
 
 div.jx-image div.jx-label {
-	padding-left: 1em;
-	padding-right: 1em;
-	padding-top: .3em;
-	padding-bottom: .5em;
+	font-size: 1em;
+	padding: .25em .75em;
 	position: relative;
 	display: inline-block;
 	top: 0;
-	background-color: rgba(0,0,0,.8);
+	background-color: rgba(0,0,0,.7);
 	color: white;
 	z-index: 0;
 	white-space: nowrap;
-	font-size: 16px;
 	line-height: 18px;
 	vertical-align: middle;
 }
